--- a/CustomXamarin/CustomXamarin/CustomXamarin.Android/CustomXamarin.Android.csproj
+++ b/CustomXamarin/CustomXamarin/CustomXamarin.Android/CustomXamarin.Android.csproj
@@ -1,14 +1,14 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5DE4C95A-AD5F-4924-A186-421971BAFE5B}</ProjectGuid>
+    <ProjectGuid>{A1497840-76D2-402E-8028-B4663AEDCE5D}</ProjectGuid>
     <ProjectTypeGuids>{EFBA0AD7-5A72-4C68-AF49-83D382785DCF};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <TemplateGuid>{c9e5eea5-ca05-42a1-839b-61506e0a37df}</TemplateGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>CustomXamarinApp.Droid</RootNamespace>
-    <AssemblyName>CustomXamarinApp.Android</AssemblyName>
+    <RootNamespace>CustomXamarin.Droid</RootNamespace>
+    <AssemblyName>CustomXamarin.Android</AssemblyName>
     <Deterministic>True</Deterministic>
     <AndroidApplication>True</AndroidApplication>
     <AndroidResgenFile>Resources\Resource.designer.cs</AndroidResgenFile>
@@ -61,6 +61,7 @@
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\DeviceOrientationService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
@@ -89,10 +90,10 @@
     <Folder Include="Resources\drawable\" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\CustomXamarinApp\CustomXamarinApp.csproj">
-      <Project>{D2323C37-B833-4441-80FA-C91E85EC1A0B}</Project>
-      <Name>CustomXamarinApp</Name>
+    <ProjectReference Include="..\CustomXamarin\CustomXamarin.csproj">
+      <Project>{EECB99EF-A72C-443E-B155-A504EFE67BBA}</Project>
+      <Name>CustomXamarin</Name>
     </ProjectReference>
   </ItemGroup>
- <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
+  <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
