--- a/CustomXamarin/CustomXamarin/CustomXamarin.iOS/Info.plist
+++ b/CustomXamarin/CustomXamarin/CustomXamarin.iOS/Info.plist
@@ -23,15 +23,15 @@
     <key>MinimumOSVersion</key>
     <string>8.0</string>
     <key>CFBundleDisplayName</key>
-    <string>CustomXamarinApp</string>
+    <string>CustomXamarin</string>
     <key>CFBundleIdentifier</key>
-    <string>com.companyname.CustomXamarinApp</string>
+    <string>com.companyname.CustomXamarin</string>
     <key>CFBundleVersion</key>
     <string>1.0</string>
     <key>UILaunchStoryboardName</key>
     <string>LaunchScreen</string>
     <key>CFBundleName</key>
-    <string>CustomXamarinApp</string>
+    <string>CustomXamarin</string>
     <key>XSAppIconAssets</key>
     <string>Assets.xcassets/AppIcon.appiconset</string>
 </dict>
